# kkexpression

./: .gitignore  Makefile  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
backup/: dataloader.py  expr.py  wrapper.py
backup/datafeed/: dataloader.py  expr.py  get_data.py
backup/expr_functions/: expr_binary_rolling.py  expr_funcs_talib.py  expr_others.py  expr_unary.py  expr_utils.py
examples/: alpha158.ipynb  alpha_factor.py  basic_factor.py  custom_factor.py  factor_analysis.py  factor_performance.py  industry_neutral.py  technical_factor.py  test_all_factors.py  test_gold_factors.py  test_worldquant101.py
kkexpr/: __init__.py  dataloader.py  expr.py  factor.py  wrapper.py
kkexpr/core/: __init__.py  analysis.py  cross_section.py  engine.py  factor.py  industry.py  operators.py  performance.py  preprocess.py
kkexpr/data/: loader.py
kkexpr/examples/: alpha158.ipynb  factor_diy.ipynb
kkexpr/expr_functions/: __init__.py  expr_binary.py  expr_binary_rolling.py  expr_funcs_talib.py  expr_not_use_in_ga.py  expr_unary.py  expr_unary_rolling.py  expr_utils.py
kkexpr/factor/: __init__.py  alpha.py  alpha158.py  alpha_momentum.py  alpha_technical.py  alpha_value.py  alpha_volatility.py  alpha_worldquant101.py
kkexpr/rust/: Cargo.toml  build.bat  build.sh
kkexpr/rust/src/: factor.rs  lib.rs  operators.rs  python.rs  rpn.rs  tests.rs
test/: test_factor.py
tests/: conftest.py  run_tests.py  test_dataloader.py  test_factor.py  test_factors.py  test_preprocess.py  test_utils.py
(+22 files in other folders)
