[package]
name = "kkexpr_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "kkexpr_rust"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.32", features = ["rolling_window", "rank"] }
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-polars = "0.6"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"